@@ -1,3 +1,9 @@
+2006-04-03  Adam Schreiber  <sadam@clemson.edu>
+
+    * plugins/applet/seahorse-applet.c:
+    * src/seahorse-key-manager.c: Remove unnecessary rendering of pixbufs
+    for about dialogs.
+
 2006-04-03  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-gtkstock.c:
